# aoc_2025

./: .gitignore  .pre-commit-config.yaml  data.py  data_file.py  pyproject.toml
.github/workflows/: ci.yml
days/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py
tests/: test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py
